# ssl-watchdog

./: README.md  pyproject.toml
src/ssl_watchdog/: __init__.py  _ssl_service.py  _whois_service.py  main.py
